--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,91 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".auth.LoginActivity">
-    <LinearLayout
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".auth.LoginActivity"
+    android:background="#fff">
+
+
+
+    <EditText
+        android:textStyle="bold"
+        android:id="@+id/editEmailog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-<ImageView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:srcCompat="@drawable/img_20190317_010038"
-    android:layout_marginTop="50dp"
-    />
-        <EditText
-            android:id="@+id/etEmail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="36dp"
-            android:layout_marginEnd="32dp"
-            android:background="@drawable/edit_bg"
-            android:inputType="textEmailAddress"
-            android:hint="@string/etEmail"
-            android:textColor="@color/secondary"
-            android:textSize="16sp"/>
-        <EditText
-            android:id="@+id/etpass1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="32dp"
-            android:background="@drawable/edit_bg"
-            android:inputType="textPassword|numberPassword"
-            android:hint="@string/etPassword"
-            android:textColor="@color/secondary"
-            android:textDirection="anyRtl"
-            android:textSize="16sp"/>
-        <Button
-            android:id="@+id/btnLogin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="8dp"
-            android:background="@drawable/btn_bg"
-            android:onClick="sign"
-            android:text="@string/Login"
-            android:textColor="@color/White"
-            android:textSize="25sp"
-           />
-        <TextView
-            android:id="@+id/tvRegister"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="36dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:text="@string/tvRegister"
-            android:textSize="25sp"
-            android:gravity="center"
-            android:textDirection="anyRtl"
-            android:textColor="@color/colorPrimary"
-            />
-        <TextView
-            android:id="@+id/tvAdmin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="36dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:text="الدخول كأدمن ؟"
-            android:textSize="25sp"
-            android:gravity="center"
-            android:textDirection="anyRtl"
-            android:textColor="@color/colorPrimary"
-            />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="120dp"
+        android:ems="10"
+        android:hint="Email"
+        android:textSize="22dp"
+        android:textColorHint="#AF2020"
+        android:inputType="textEmailAddress"
+        android:textAlignment="center"
+        />
+
+    <EditText
+        android:textStyle="bold"
+        android:id="@+id/editPass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="190dp"
+        android:ems="10"
+        android:hint="Password"
+        android:textSize="22dp"
+        android:textColorHint="#AF2020"
+        android:inputType="textPassword"
+        android:textAlignment="center"
+
+        />
+
+    <Button
+        android:id="@+id/btnLog"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editPass"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="46dp"
+        android:background="@drawable/btncustom"
+        android:onClick="sign"
+        android:text="Log In"
 
 
-    </LinearLayout>
+        android:textColor="#AF2020"
+        android:textSize="24dp"
+        android:textStyle="bold" />
 
-</ScrollView>
+
+
+    <Button
+        android:textColor="#AF2020"
+
+        android:id="@+id/btnReg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="120dp"
+        android:background="@drawable/btncustom"
+        android:text="Register"
+        android:textSize="24dp"
+        android:textStyle="bold"
+        android:layout_below="@+id/btnLog"
+        android:layout_centerHorizontal="true" />
+
+    <ProgressBar
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        android:id="@+id/progressBar"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
+
+
+</RelativeLayout>
